--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values-ml/strings.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values-ml/strings.xml
@@ -25,6 +25,5 @@
     <string name="audio_route_handset" msgid="8283803824498570957">"ഫോൺ"</string>
     <string name="back" msgid="2360066808525519279">"മടങ്ങുക"</string>
     <string name="fullscreen" msgid="4312009981831027701">"പൂർണ്ണ സ്ക്രീൻ"</string>
-    <!-- no translation found for blank_home_message (1931676618245482098) -->
-    <skip />
+    <string name="blank_home_message" msgid="1931676618245482098">"ഒരു ആപ്പ് തുറക്കുക"</string>
 </resources>
