--- a/car_product/car_ui_portrait/rro/CarUiPortraitDialerRRO/res/values-or/strings.xml
+++ b/car_product/car_ui_portrait/rro/CarUiPortraitDialerRRO/res/values-or/strings.xml
@@ -24,7 +24,7 @@
     <string name="decline_call" msgid="3593508497959313142"></string>
     <string name="answer_call" msgid="5688982198411188640"></string>
     <string name="no_hfp" msgid="2403350988312998712">"ଆପଣଙ୍କ କଲ ସମାପ୍ତ କରିବାକୁ, ପ୍ରଥମେ ଆପଣଙ୍କ ଫୋନକୁ ବ୍ଲୁଟୁଥ ମାଧ୍ୟମରେ ଆପଣଙ୍କର କାର ସହ ସଂଯୋଗ କରନ୍ତୁ।"</string>
-    <string name="call_history_title" msgid="2665386600747022608">"ବର୍ତ୍ତମାନର"</string>
+    <string name="call_history_title" msgid="2665386600747022608">"ବର୍ତ୍ତମାନ"</string>
     <string name="contacts_title" msgid="1240631807791315855">"କଣ୍ଟାକ୍ଟ"</string>
     <string name="favorites_title" msgid="8714933097892306747">"ପସନ୍ଦ"</string>
     <string name="dialpad_title" msgid="8608224919862313238">"ଡାଏଲପେଡ"</string>
