--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values-fa/strings.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values-fa/strings.xml
@@ -25,6 +25,5 @@
     <string name="audio_route_handset" msgid="8283803824498570957">"تلفن"</string>
     <string name="back" msgid="2360066808525519279">"برگشتن"</string>
     <string name="fullscreen" msgid="4312009981831027701">"تمام صفحه"</string>
-    <!-- no translation found for blank_home_message (1931676618245482098) -->
-    <skip />
+    <string name="blank_home_message" msgid="1931676618245482098">"برنامه‌ای را باز کنید"</string>
 </resources>
