--- a/car_product/rro/CarSystemUIPassengerRRO/res/values-ne/strings.xml
+++ b/car_product/rro/CarSystemUIPassengerRRO/res/values-ne/strings.xml
@@ -19,5 +19,5 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="system_bar_passenger_home_label" msgid="6669824047244356324">"होम स्क्रिन"</string>
     <string name="system_bar_control_center_label" msgid="958644321806830440">"कन्ट्रोल सेन्टर"</string>
-    <string name="system_bar_notifications_label" msgid="2885882152000501006">"सूचनाहरू"</string>
+    <string name="system_bar_notifications_label" msgid="2885882152000501006">"नोटिफिकेसनहरू"</string>
 </resources>
