--- a/service/res/values-as/strings.xml
+++ b/service/res/values-as/strings.xml
@@ -30,6 +30,10 @@
     <string name="car_permission_desc_hvac" msgid="3754229695589774195">"আপোনাৰ গাড়ীৰ hvac এক্সেছ কৰিব।"</string>
     <string name="car_permission_label_mileage" msgid="4661317074631150551">"গাড়ীৰ মাইলেজৰ তথ্য এক্সেছ কৰিব"</string>
     <string name="car_permission_desc_mileage" msgid="7179735693278681090">"আপোনাৰ গাড়ীৰ মাইলেজৰ তথ্য চাব।"</string>
+    <!-- no translation found for car_permission_label_mileage_3p (7542459195663034759) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_mileage_3p (9109350882748664570) -->
+    <skip />
     <string name="car_permission_label_speed" msgid="1149027717860529745">"গাড়ীৰ বেগ পঢ়িব"</string>
     <string name="car_permission_desc_speed" msgid="2047965198165448241">"আপোনাৰ গাড়ীৰ বেগ চাব।"</string>
     <string name="car_permission_label_vehicle_dynamics_state" msgid="313779267420048367">"গাড়ীৰ ডাইনেমিক স্থিতি এক্সেছ কৰিব"</string>
@@ -92,6 +96,10 @@
     <string name="car_permission_desc_storage_monitoring" msgid="2075712271139671318">"ফ্লেশ্ব ষ্ট’ৰেজৰ ব্যৱহাৰ নিৰীক্ষণ কৰক"</string>
     <string name="car_permission_label_driving_state" msgid="7754624599537393650">"গাড়ী চালনাৰ স্থিতি সলনি হ’লে সেইয়া জানিব"</string>
     <string name="car_permission_desc_driving_state" msgid="2684025262811635737">"গাড়ী চালনাৰ স্থিতি সলনি হ’লে সেইয়া জানিব।"</string>
+    <!-- no translation found for car_permission_label_driving_state_3p (1395905103166125030) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_driving_state_3p (5491522450897843003) -->
+    <skip />
     <string name="car_permission_label_use_telemetry_service" msgid="948005838683758846">"গাড়ীৰ টেলিমেট্ৰী সেৱা ব্যৱহাৰ কৰক"</string>
     <string name="car_permission_desc_use_telemetry_service" msgid="3633214312435700766">"গাড়ীৰ ছিষ্টেমৰ অৱস্থা সম্পৰ্কীয় ডেটা সংগ্ৰহ কৰক।"</string>
     <string name="car_permission_label_use_evs_service" msgid="1729276125209310607">"গাড়ীৰ EVS ছাৰ্ভিচ ব্যৱহাৰ কৰক"</string>
@@ -106,6 +114,10 @@
     <string name="car_permission_desc_monitor_evs_status" msgid="2764278897143573535">"EVS সেৱাটোৰ স্থিতি সালসলনিসমূহ শুনক"</string>
     <string name="car_permission_label_car_engine_detailed" msgid="8911992719173587337">"গাড়ীৰ ইঞ্জিনৰ সবিশেষ তথ্য এক্সেছ কৰিব"</string>
     <string name="car_permission_desc_car_engine_detailed" msgid="1746863362811347700">"আপোনাৰ গাড়ীৰ ইঞ্জিনৰ সবিশেষ তথ্য এক্সেছ কৰিব।"</string>
+    <!-- no translation found for car_permission_label_car_engine_detailed_3p (2695036212735960169) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_engine_detailed_3p (7536940094077391015) -->
+    <skip />
     <string name="car_permission_label_car_energy_ports" msgid="8548990315169219454">"গাড়ীৰ ইন্ধনৰ দৰ্জা আৰু চাৰ্জ প’ৰ্ট এক্সেছ কৰিব"</string>
     <string name="car_permission_desc_car_energy_ports" msgid="7771185999828794949">"গাড়ীৰ ইন্ধনৰ দৰ্জা আৰু চাৰ্জ প’ৰ্ট এক্সেছ কৰিব।"</string>
     <string name="car_permission_label_control_car_energy_ports" msgid="4375137311026313475">"গাড়ীৰ ইন্ধনৰ দৰ্জা আৰু চাৰ্জ প’ৰ্ট নিয়ন্ত্ৰণ কৰা"</string>
@@ -120,6 +132,10 @@
     <string name="car_permission_desc_control_car_mirrors" msgid="1224135684068855032">"গাড়ীৰ আইনা নিয়ন্ত্ৰণ কৰিব।"</string>
     <string name="car_permission_label_control_car_seats" msgid="1826934820585497135">"গাড়ীৰ আসন নিয়ন্ত্ৰণ কৰিব"</string>
     <string name="car_permission_desc_control_car_seats" msgid="2407536601226470563">"গাড়ীৰ আসন নিয়ন্ত্ৰণ কৰিব।"</string>
+    <!-- no translation found for car_permission_label_read_car_seats (2996918480980128872) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_seats (5894145845932493046) -->
+    <skip />
     <string name="car_permission_label_read_car_seat_belts" msgid="2051828795852087659">"গাড়ীৰ ছিট বেল্টৰ স্থিতিৰ বিষয়ে জনা"</string>
     <string name="car_permission_desc_read_car_seat_belts" msgid="7076977711613912339">"গাড়ীৰ ছিট বেল্টৰ স্থিতিৰ বিষয়ে জনা।"</string>
     <string name="car_permission_label_read_impact_sensors" msgid="9193288836326363975">"গাড়ীৰ খুন্দা মৰা সম্পৰ্কীয় ছেন্সৰৰ বিষয়ে জনা"</string>
@@ -158,8 +174,16 @@
     <string name="car_permission_desc_car_exterior_environment" msgid="1716656004731603379">"গাড়ীৰ বাহ্যিক তাপমান এক্সেছ কৰিব।"</string>
     <string name="car_permission_label_car_tires" msgid="4379255261197836840">"গাড়ীৰ টায়াৰৰ তথ্য এক্সেছ কৰিব"</string>
     <string name="car_permission_desc_car_tires" msgid="8134496466769810134">"গাড়ীৰ টায়াৰৰ তথ্য এক্সেছ কৰিব।"</string>
+    <!-- no translation found for car_permission_label_car_tires_3p (1360632319908226570) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_tires_3p (820574543667371274) -->
+    <skip />
     <string name="car_permission_label_car_steering" msgid="7779530447441232479">"গাড়ীৰ ষ্টীয়েৰিঙৰ কোণৰ তথ্য পঢ়িব"</string>
     <string name="car_permission_desc_car_steering" msgid="1357331844530708138">"গাড়ীৰ ষ্টীয়েৰিঙৰ কোণৰ তথ্য এক্সেছ কৰিব।"</string>
+    <!-- no translation found for car_permission_label_read_car_steering_3p (1598866058085489462) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_steering_3p (576361609663755171) -->
+    <skip />
     <string name="car_permission_label_read_car_display_units" msgid="7617008314862097183">"গাড়ীৰ ডিছপ্লে’ ইউনিট পঢ়িব"</string>
     <string name="car_permission_desc_read_car_display_units" msgid="6891898275208542385">"ডিছপ্লে’ ইউনিট পঢ়িব।"</string>
     <string name="car_permission_label_control_car_display_units" msgid="4975303668183173076">"গাড়ীৰ ডিছপ্লে’ ইউনিট নিয়ন্ত্ৰণ কৰিব"</string>
@@ -212,6 +236,10 @@
     <string name="car_permission_desc_control_adas_states" msgid="1893171217779342348">"গাড়ীৰ ADAS স্থিতিৰ তথ্য নিয়ন্ত্ৰণ কৰক।"</string>
     <string name="car_permission_label_read_windshield_wipers" msgid="896867772546890348">"গাড়ীৰ ৱিণ্ডশ্বিল্ড ৱাইপাৰ পঢ়ক"</string>
     <string name="car_permission_desc_read_windshield_wipers" msgid="597300271560195986">"গাড়ীৰ ৱিণ্ডশ্বিল্ড ৱাইপাৰ পঢ়ক।"</string>
+    <!-- no translation found for car_permission_label_read_windshield_wipers_3p (4784843702416325970) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_windshield_wipers_3p (604163171596913379) -->
+    <skip />
     <string name="car_permission_label_control_windshield_wipers" msgid="7971852482734087493">"গাড়ীৰ ৱিণ্ডশ্বিল্ড ৱাইপাৰ নিয়ন্ত্ৰণ কৰক"</string>
     <string name="car_permission_desc_control_windshield_wipers" msgid="3803429825323199728">"গাড়ীৰ ৱিণ্ডশ্বিল্ড ৱাইপাৰ নিয়ন্ত্ৰণ কৰক।"</string>
     <string name="car_permission_label_manage_display_compatibility" msgid="52642673039197383">"ডিছপ্লে’ৰ সুসংগতা পেকেজ পৰিচালনা কৰক"</string>
