--- a/service/res/values-bg/strings.xml
+++ b/service/res/values-bg/strings.xml
@@ -30,6 +30,10 @@
     <string name="car_permission_desc_hvac" msgid="3754229695589774195">"Достъп до ОВК системата на автомобила."</string>
     <string name="car_permission_label_mileage" msgid="4661317074631150551">"достъп до информацията за километража на автомобила"</string>
     <string name="car_permission_desc_mileage" msgid="7179735693278681090">"Достъп до информацията за километража на автомобила ви."</string>
+    <!-- no translation found for car_permission_label_mileage_3p (7542459195663034759) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_mileage_3p (9109350882748664570) -->
+    <skip />
     <string name="car_permission_label_speed" msgid="1149027717860529745">"четене на скоростта на автомобила"</string>
     <string name="car_permission_desc_speed" msgid="2047965198165448241">"Достъп до данните за скоростта на автомобила ви."</string>
     <string name="car_permission_label_vehicle_dynamics_state" msgid="313779267420048367">"достъп до състоянието на динамичните компоненти на автомобила"</string>
@@ -92,6 +96,10 @@
     <string name="car_permission_desc_storage_monitoring" msgid="2075712271139671318">"Наблюдение на използването на флаш хранилището"</string>
     <string name="car_permission_label_driving_state" msgid="7754624599537393650">"слушане за състоянието на шофиране"</string>
     <string name="car_permission_desc_driving_state" msgid="2684025262811635737">"Слушане за промени в състоянието на шофиране."</string>
+    <!-- no translation found for car_permission_label_driving_state_3p (1395905103166125030) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_driving_state_3p (5491522450897843003) -->
+    <skip />
     <string name="car_permission_label_use_telemetry_service" msgid="948005838683758846">"Използване на автомобилната услуга за телеметрия"</string>
     <string name="car_permission_desc_use_telemetry_service" msgid="3633214312435700766">"Събиране на данни за състоянието на системата на автомобила."</string>
     <string name="car_permission_label_use_evs_service" msgid="1729276125209310607">"Използване на автомобилната услуга за ЕПС"</string>
@@ -106,6 +114,10 @@
     <string name="car_permission_desc_monitor_evs_status" msgid="2764278897143573535">"Слушане на промените в състоянието на услугата за ЕПС"</string>
     <string name="car_permission_label_car_engine_detailed" msgid="8911992719173587337">"достъп до подробни данни за двигателя на автомобила"</string>
     <string name="car_permission_desc_car_engine_detailed" msgid="1746863362811347700">"Достъп до подробна информация за двигателя на автомобила."</string>
+    <!-- no translation found for car_permission_label_car_engine_detailed_3p (2695036212735960169) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_engine_detailed_3p (7536940094077391015) -->
+    <skip />
     <string name="car_permission_label_car_energy_ports" msgid="8548990315169219454">"достъп до капака за резервоара и порта за зареждане на автомобила"</string>
     <string name="car_permission_desc_car_energy_ports" msgid="7771185999828794949">"Достъп до капака за резервоара и порта за зареждане на автомобила."</string>
     <string name="car_permission_label_control_car_energy_ports" msgid="4375137311026313475">"управление на капака за резервоара и порта за зареждане на автомобила"</string>
@@ -120,6 +132,10 @@
     <string name="car_permission_desc_control_car_mirrors" msgid="1224135684068855032">"Контролиране на огледалата на автомобила."</string>
     <string name="car_permission_label_control_car_seats" msgid="1826934820585497135">"контролиране на седалките на автомобила"</string>
     <string name="car_permission_desc_control_car_seats" msgid="2407536601226470563">"Контролиране на седалките на автомобила."</string>
+    <!-- no translation found for car_permission_label_read_car_seats (2996918480980128872) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_seats (5894145845932493046) -->
+    <skip />
     <string name="car_permission_label_read_car_seat_belts" msgid="2051828795852087659">"управление на коланите на седалките на автомобила"</string>
     <string name="car_permission_desc_read_car_seat_belts" msgid="7076977711613912339">"Четене на коланите на седалките на автомобила."</string>
     <string name="car_permission_label_read_impact_sensors" msgid="9193288836326363975">"управление на сензорите на автомобила за сблъсък"</string>
@@ -158,8 +174,16 @@
     <string name="car_permission_desc_car_exterior_environment" msgid="1716656004731603379">"Достъп до данните за външната температура на автомобила."</string>
     <string name="car_permission_label_car_tires" msgid="4379255261197836840">"достъп до информация за гумите на автомобила"</string>
     <string name="car_permission_desc_car_tires" msgid="8134496466769810134">"Достъп до информация за гумите на автомобила."</string>
+    <!-- no translation found for car_permission_label_car_tires_3p (1360632319908226570) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_tires_3p (820574543667371274) -->
+    <skip />
     <string name="car_permission_label_car_steering" msgid="7779530447441232479">"четене на информацията за ъгъла на завиване на автомобила"</string>
     <string name="car_permission_desc_car_steering" msgid="1357331844530708138">"Достъп до информацията за ъгъла на завиване на автомобила."</string>
+    <!-- no translation found for car_permission_label_read_car_steering_3p (1598866058085489462) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_steering_3p (576361609663755171) -->
+    <skip />
     <string name="car_permission_label_read_car_display_units" msgid="7617008314862097183">"четене на дисплеите на автомобила"</string>
     <string name="car_permission_desc_read_car_display_units" msgid="6891898275208542385">"Четене на дисплеите."</string>
     <string name="car_permission_label_control_car_display_units" msgid="4975303668183173076">"управление на дисплеите на автомобила"</string>
@@ -212,6 +236,10 @@
     <string name="car_permission_desc_control_adas_states" msgid="1893171217779342348">"Управление на информацията за състоянията на усъвършенстваната система за подпомагане на водача в автомобила ви."</string>
     <string name="car_permission_label_read_windshield_wipers" msgid="896867772546890348">"четене на чистачките на автомобила"</string>
     <string name="car_permission_desc_read_windshield_wipers" msgid="597300271560195986">"Четене на чистачките на автомобила."</string>
+    <!-- no translation found for car_permission_label_read_windshield_wipers_3p (4784843702416325970) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_windshield_wipers_3p (604163171596913379) -->
+    <skip />
     <string name="car_permission_label_control_windshield_wipers" msgid="7971852482734087493">"управление на чистачките на автомобила"</string>
     <string name="car_permission_desc_control_windshield_wipers" msgid="3803429825323199728">"Управление на чистачките на автомобила."</string>
     <string name="car_permission_label_manage_display_compatibility" msgid="52642673039197383">"управление на пакетите за съвместимост с екрана"</string>
