--- a/service/res/values-cs/strings.xml
+++ b/service/res/values-cs/strings.xml
@@ -30,6 +30,10 @@
     <string name="car_permission_desc_hvac" msgid="3754229695589774195">"Přístup k systému HVAC auta."</string>
     <string name="car_permission_label_mileage" msgid="4661317074631150551">"přístup k ujetým kilometrům auta"</string>
     <string name="car_permission_desc_mileage" msgid="7179735693278681090">"Přístup k údajům o spotřebě auta."</string>
+    <!-- no translation found for car_permission_label_mileage_3p (7542459195663034759) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_mileage_3p (9109350882748664570) -->
+    <skip />
     <string name="car_permission_label_speed" msgid="1149027717860529745">"čtení rychlosti auta"</string>
     <string name="car_permission_desc_speed" msgid="2047965198165448241">"Přístup k rychlosti auta."</string>
     <string name="car_permission_label_vehicle_dynamics_state" msgid="313779267420048367">"přístup k dynamickému stavu auta"</string>
@@ -92,6 +96,10 @@
     <string name="car_permission_desc_storage_monitoring" msgid="2075712271139671318">"Sledování využití úložiště flash"</string>
     <string name="car_permission_label_driving_state" msgid="7754624599537393650">"poslech změn jízdy autem"</string>
     <string name="car_permission_desc_driving_state" msgid="2684025262811635737">"Poslech změn stavu jízdy autem."</string>
+    <!-- no translation found for car_permission_label_driving_state_3p (1395905103166125030) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_driving_state_3p (5491522450897843003) -->
+    <skip />
     <string name="car_permission_label_use_telemetry_service" msgid="948005838683758846">"Využití telemetrické služby auta"</string>
     <string name="car_permission_desc_use_telemetry_service" msgid="3633214312435700766">"Shromažďování dat o kondici systému auta."</string>
     <string name="car_permission_label_use_evs_service" msgid="1729276125209310607">"Používání služby EVS pro auto"</string>
@@ -106,6 +114,10 @@
     <string name="car_permission_desc_monitor_evs_status" msgid="2764278897143573535">"Poslech změn stavu služby EVS"</string>
     <string name="car_permission_label_car_engine_detailed" msgid="8911992719173587337">"přístup k podrobným informacím o motoru auta"</string>
     <string name="car_permission_desc_car_engine_detailed" msgid="1746863362811347700">"Přístup k podrobným údajům o motoru auta."</string>
+    <!-- no translation found for car_permission_label_car_engine_detailed_3p (2695036212735960169) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_engine_detailed_3p (7536940094077391015) -->
+    <skip />
     <string name="car_permission_label_car_energy_ports" msgid="8548990315169219454">"přístup ke vstupu do nádrže a nabíjecímu portu auta"</string>
     <string name="car_permission_desc_car_energy_ports" msgid="7771185999828794949">"Přístup ke vstupu do nádrže a nabíjecímu portu auta."</string>
     <string name="car_permission_label_control_car_energy_ports" msgid="4375137311026313475">"přístup ke vstupu do nádrže a nabíjecímu portu auta"</string>
@@ -120,6 +132,10 @@
     <string name="car_permission_desc_control_car_mirrors" msgid="1224135684068855032">"Ovládání zrcátek auta."</string>
     <string name="car_permission_label_control_car_seats" msgid="1826934820585497135">"ovládání autosedaček"</string>
     <string name="car_permission_desc_control_car_seats" msgid="2407536601226470563">"Ovládání autosedaček."</string>
+    <!-- no translation found for car_permission_label_read_car_seats (2996918480980128872) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_seats (5894145845932493046) -->
+    <skip />
     <string name="car_permission_label_read_car_seat_belts" msgid="2051828795852087659">"kontrola bezpečnostních pásů auta"</string>
     <string name="car_permission_desc_read_car_seat_belts" msgid="7076977711613912339">"Kontrola bezpečnostních pásů auta."</string>
     <string name="car_permission_label_read_impact_sensors" msgid="9193288836326363975">"kontrola senzorů nárazu auta"</string>
@@ -158,8 +174,16 @@
     <string name="car_permission_desc_car_exterior_environment" msgid="1716656004731603379">"Přístup k vnější teplotě auta."</string>
     <string name="car_permission_label_car_tires" msgid="4379255261197836840">"přístup k údajům o pneumatikách auta"</string>
     <string name="car_permission_desc_car_tires" msgid="8134496466769810134">"Přístup k údajům o pneumatikách auta."</string>
+    <!-- no translation found for car_permission_label_car_tires_3p (1360632319908226570) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_tires_3p (820574543667371274) -->
+    <skip />
     <string name="car_permission_label_car_steering" msgid="7779530447441232479">"čtení údajů o úhlu rejdu auta"</string>
     <string name="car_permission_desc_car_steering" msgid="1357331844530708138">"Přístup k údajům o úhlu rejdu auta."</string>
+    <!-- no translation found for car_permission_label_read_car_steering_3p (1598866058085489462) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_steering_3p (576361609663755171) -->
+    <skip />
     <string name="car_permission_label_read_car_display_units" msgid="7617008314862097183">"čtení zobrazovaných jednotek v autě"</string>
     <string name="car_permission_desc_read_car_display_units" msgid="6891898275208542385">"Čtení zobrazovaných jednotek."</string>
     <string name="car_permission_label_control_car_display_units" msgid="4975303668183173076">"ovládání zobrazovaných jednotek v autě"</string>
@@ -212,6 +236,10 @@
     <string name="car_permission_desc_control_adas_states" msgid="1893171217779342348">"Ovládání informací o stavu systému ADAS auta."</string>
     <string name="car_permission_label_read_windshield_wipers" msgid="896867772546890348">"čtení informací o stěračích auta"</string>
     <string name="car_permission_desc_read_windshield_wipers" msgid="597300271560195986">"Čtení informací o stěračích auta."</string>
+    <!-- no translation found for car_permission_label_read_windshield_wipers_3p (4784843702416325970) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_windshield_wipers_3p (604163171596913379) -->
+    <skip />
     <string name="car_permission_label_control_windshield_wipers" msgid="7971852482734087493">"ovládání stěračů auta"</string>
     <string name="car_permission_desc_control_windshield_wipers" msgid="3803429825323199728">"Ovládání stěračů auta."</string>
     <string name="car_permission_label_manage_display_compatibility" msgid="52642673039197383">"správa balíčků s kompatibilitou displeje"</string>
