--- a/service/res/values-hr/strings.xml
+++ b/service/res/values-hr/strings.xml
@@ -30,6 +30,10 @@
     <string name="car_permission_desc_hvac" msgid="3754229695589774195">"pristupiti grijanju, ventilaciji i klimatizaciji vašeg automobila"</string>
     <string name="car_permission_label_mileage" msgid="4661317074631150551">"pristupiti podacima o kilometraži automobila"</string>
     <string name="car_permission_desc_mileage" msgid="7179735693278681090">"pristupiti informacijama o kilometraži automobila"</string>
+    <!-- no translation found for car_permission_label_mileage_3p (7542459195663034759) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_mileage_3p (9109350882748664570) -->
+    <skip />
     <string name="car_permission_label_speed" msgid="1149027717860529745">"čitati brzinu automobila"</string>
     <string name="car_permission_desc_speed" msgid="2047965198165448241">"pristupiti brzini automobila"</string>
     <string name="car_permission_label_vehicle_dynamics_state" msgid="313779267420048367">"pristupiti stanju dinamike automobila"</string>
@@ -92,6 +96,10 @@
     <string name="car_permission_desc_storage_monitoring" msgid="2075712271139671318">"nadzirati upotrebu flash pohrane"</string>
     <string name="car_permission_label_driving_state" msgid="7754624599537393650">"slušati stanje vožnje"</string>
     <string name="car_permission_desc_driving_state" msgid="2684025262811635737">"slušati promjene stanja vožnje"</string>
+    <!-- no translation found for car_permission_label_driving_state_3p (1395905103166125030) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_driving_state_3p (5491522450897843003) -->
+    <skip />
     <string name="car_permission_label_use_telemetry_service" msgid="948005838683758846">"Koristi uslugu telemetrije automobila"</string>
     <string name="car_permission_desc_use_telemetry_service" msgid="3633214312435700766">"Prikupi podatke o stanju sustava automobila."</string>
     <string name="car_permission_label_use_evs_service" msgid="1729276125209310607">"koristiti EVS uslugu za automobil"</string>
@@ -106,6 +114,10 @@
     <string name="car_permission_desc_monitor_evs_status" msgid="2764278897143573535">"slušati promjene statusa usluge EVS-a"</string>
     <string name="car_permission_label_car_engine_detailed" msgid="8911992719173587337">"pristupiti pojedinostima o automobilskom motoru"</string>
     <string name="car_permission_desc_car_engine_detailed" msgid="1746863362811347700">"pristupiti detaljnim podacima o motoru automobila"</string>
+    <!-- no translation found for car_permission_label_car_engine_detailed_3p (2695036212735960169) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_engine_detailed_3p (7536940094077391015) -->
+    <skip />
     <string name="car_permission_label_car_energy_ports" msgid="8548990315169219454">"pristupiti poklopcu spremnika za gorivo i priključku za punjenje na automobilu"</string>
     <string name="car_permission_desc_car_energy_ports" msgid="7771185999828794949">"pristupiti poklopcu spremnika za gorivo i priključku za punjenje na automobilu"</string>
     <string name="car_permission_label_control_car_energy_ports" msgid="4375137311026313475">"kontrolirati poklopac spremnika za gorivo i priključak za punjenje na automobilu"</string>
@@ -120,6 +132,10 @@
     <string name="car_permission_desc_control_car_mirrors" msgid="1224135684068855032">"upravljati automobilskim retrovizorima"</string>
     <string name="car_permission_label_control_car_seats" msgid="1826934820585497135">"upravljati automobilskim sjedalima"</string>
     <string name="car_permission_desc_control_car_seats" msgid="2407536601226470563">"upravljati automobilskim sjedalima"</string>
+    <!-- no translation found for car_permission_label_read_car_seats (2996918480980128872) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_seats (5894145845932493046) -->
+    <skip />
     <string name="car_permission_label_read_car_seat_belts" msgid="2051828795852087659">"očitavanje sigurnosnih pojaseva automobila"</string>
     <string name="car_permission_desc_read_car_seat_belts" msgid="7076977711613912339">"Očitavanje sigurnosnih pojaseva automobila."</string>
     <string name="car_permission_label_read_impact_sensors" msgid="9193288836326363975">"očitavanje senzora udara automobila"</string>
@@ -158,8 +174,16 @@
     <string name="car_permission_desc_car_exterior_environment" msgid="1716656004731603379">"pristupiti temperaturi vanjskog prostora automobila"</string>
     <string name="car_permission_label_car_tires" msgid="4379255261197836840">"pristupiti podacima o automobilskim gumama"</string>
     <string name="car_permission_desc_car_tires" msgid="8134496466769810134">"pristupiti podacima o automobilskim gumama"</string>
+    <!-- no translation found for car_permission_label_car_tires_3p (1360632319908226570) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_tires_3p (820574543667371274) -->
+    <skip />
     <string name="car_permission_label_car_steering" msgid="7779530447441232479">"čitati podatke o kutu upravljanja automobilom"</string>
     <string name="car_permission_desc_car_steering" msgid="1357331844530708138">"pristupiti podacima o kutu upravljanja automobilom"</string>
+    <!-- no translation found for car_permission_label_read_car_steering_3p (1598866058085489462) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_steering_3p (576361609663755171) -->
+    <skip />
     <string name="car_permission_label_read_car_display_units" msgid="7617008314862097183">"čitati jedinice za prikaz za automobil"</string>
     <string name="car_permission_desc_read_car_display_units" msgid="6891898275208542385">"čitati jedinice za prikaz"</string>
     <string name="car_permission_label_control_car_display_units" msgid="4975303668183173076">"upravljati jedinicama za prikaz za automobil"</string>
@@ -212,6 +236,10 @@
     <string name="car_permission_desc_control_adas_states" msgid="1893171217779342348">"Upravljanje podacima o stanjima ADAS-a automobila."</string>
     <string name="car_permission_label_read_windshield_wipers" msgid="896867772546890348">"čitanje brisača vjetrobrana automobila"</string>
     <string name="car_permission_desc_read_windshield_wipers" msgid="597300271560195986">"Čitanje brisača vjetrobrana automobila."</string>
+    <!-- no translation found for car_permission_label_read_windshield_wipers_3p (4784843702416325970) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_windshield_wipers_3p (604163171596913379) -->
+    <skip />
     <string name="car_permission_label_control_windshield_wipers" msgid="7971852482734087493">"upravljanje brisačima vjetrobrana automobila"</string>
     <string name="car_permission_desc_control_windshield_wipers" msgid="3803429825323199728">"Upravljanje brisačima vjetrobrana automobila."</string>
     <string name="car_permission_label_manage_display_compatibility" msgid="52642673039197383">"upravljanje paketima kompatibilnosti prikaza"</string>
