--- a/service/res/values-ko/strings.xml
+++ b/service/res/values-ko/strings.xml
@@ -30,6 +30,10 @@
     <string name="car_permission_desc_hvac" msgid="3754229695589774195">"차량 공조기에 액세스합니다."</string>
     <string name="car_permission_label_mileage" msgid="4661317074631150551">"차량 주행 거리 정보에 액세스"</string>
     <string name="car_permission_desc_mileage" msgid="7179735693278681090">"차량 주행거리 정보에 액세스"</string>
+    <!-- no translation found for car_permission_label_mileage_3p (7542459195663034759) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_mileage_3p (9109350882748664570) -->
+    <skip />
     <string name="car_permission_label_speed" msgid="1149027717860529745">"차량 속도 읽기"</string>
     <string name="car_permission_desc_speed" msgid="2047965198165448241">"차량 속도에 액세스"</string>
     <string name="car_permission_label_vehicle_dynamics_state" msgid="313779267420048367">"차량 역학 상태에 액세스"</string>
@@ -92,6 +96,10 @@
     <string name="car_permission_desc_storage_monitoring" msgid="2075712271139671318">"플래시 저장소 사용 모니터링"</string>
     <string name="car_permission_label_driving_state" msgid="7754624599537393650">"운전 상태 감지"</string>
     <string name="car_permission_desc_driving_state" msgid="2684025262811635737">"운전 상태 변화를 감지합니다."</string>
+    <!-- no translation found for car_permission_label_driving_state_3p (1395905103166125030) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_driving_state_3p (5491522450897843003) -->
+    <skip />
     <string name="car_permission_label_use_telemetry_service" msgid="948005838683758846">"자동차 원격 분석 서비스를 사용합니다."</string>
     <string name="car_permission_desc_use_telemetry_service" msgid="3633214312435700766">"자동차 시스템 건강 데이터를 수집합니다."</string>
     <string name="car_permission_label_use_evs_service" msgid="1729276125209310607">"자동차 EVS 서비스 사용하기"</string>
@@ -106,6 +114,10 @@
     <string name="car_permission_desc_monitor_evs_status" msgid="2764278897143573535">"EVS 서비스의 상태 변경사항 감지"</string>
     <string name="car_permission_label_car_engine_detailed" msgid="8911992719173587337">"차량 엔진 상세 정보에 액세스"</string>
     <string name="car_permission_desc_car_engine_detailed" msgid="1746863362811347700">"차량의 상세한 엔진 정보에 액세스합니다."</string>
+    <!-- no translation found for car_permission_label_car_engine_detailed_3p (2695036212735960169) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_engine_detailed_3p (7536940094077391015) -->
+    <skip />
     <string name="car_permission_label_car_energy_ports" msgid="8548990315169219454">"차량 주유구 캡 및 충전 포트 액세스"</string>
     <string name="car_permission_desc_car_energy_ports" msgid="7771185999828794949">"차량의 주유구 캡 및 충전 포트에 액세스합니다."</string>
     <string name="car_permission_label_control_car_energy_ports" msgid="4375137311026313475">"차량 주유구 캡 및 충전 포트 액세스 제어"</string>
@@ -120,6 +132,10 @@
     <string name="car_permission_desc_control_car_mirrors" msgid="1224135684068855032">"차량 미러를 제어합니다."</string>
     <string name="car_permission_label_control_car_seats" msgid="1826934820585497135">"차량 시트 제어"</string>
     <string name="car_permission_desc_control_car_seats" msgid="2407536601226470563">"차량 시트를 제어합니다."</string>
+    <!-- no translation found for car_permission_label_read_car_seats (2996918480980128872) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_seats (5894145845932493046) -->
+    <skip />
     <string name="car_permission_label_read_car_seat_belts" msgid="2051828795852087659">"자동차의 안전벨트를 읽습니다."</string>
     <string name="car_permission_desc_read_car_seat_belts" msgid="7076977711613912339">"자동차의 안전벨트를 읽습니다."</string>
     <string name="car_permission_label_read_impact_sensors" msgid="9193288836326363975">"자동차의 임팩트 센서를 읽습니다."</string>
@@ -158,8 +174,16 @@
     <string name="car_permission_desc_car_exterior_environment" msgid="1716656004731603379">"차량 외부 온도에 액세스합니다."</string>
     <string name="car_permission_label_car_tires" msgid="4379255261197836840">"차량 타이어 정보에 액세스"</string>
     <string name="car_permission_desc_car_tires" msgid="8134496466769810134">"차량 타이어 정보에 액세스합니다."</string>
+    <!-- no translation found for car_permission_label_car_tires_3p (1360632319908226570) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_tires_3p (820574543667371274) -->
+    <skip />
     <string name="car_permission_label_car_steering" msgid="7779530447441232479">"차량 조향각 정보 읽기"</string>
     <string name="car_permission_desc_car_steering" msgid="1357331844530708138">"차량의 조향각 정보에 액세스합니다."</string>
+    <!-- no translation found for car_permission_label_read_car_steering_3p (1598866058085489462) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_steering_3p (576361609663755171) -->
+    <skip />
     <string name="car_permission_label_read_car_display_units" msgid="7617008314862097183">"차량 디스플레이 유닛 읽기"</string>
     <string name="car_permission_desc_read_car_display_units" msgid="6891898275208542385">"디스플레이 유닛을 읽습니다."</string>
     <string name="car_permission_label_control_car_display_units" msgid="4975303668183173076">"차량 디스플레이 유닛 제어"</string>
@@ -212,6 +236,10 @@
     <string name="car_permission_desc_control_adas_states" msgid="1893171217779342348">"차량의 ADAS 상태 정보를 관리합니다."</string>
     <string name="car_permission_label_read_windshield_wipers" msgid="896867772546890348">"차량 와이퍼를 읽습니다."</string>
     <string name="car_permission_desc_read_windshield_wipers" msgid="597300271560195986">"차량 와이퍼를 읽습니다."</string>
+    <!-- no translation found for car_permission_label_read_windshield_wipers_3p (4784843702416325970) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_windshield_wipers_3p (604163171596913379) -->
+    <skip />
     <string name="car_permission_label_control_windshield_wipers" msgid="7971852482734087493">"차량 와이퍼를 제어합니다."</string>
     <string name="car_permission_desc_control_windshield_wipers" msgid="3803429825323199728">"차량 와이퍼를 제어합니다."</string>
     <string name="car_permission_label_manage_display_compatibility" msgid="52642673039197383">"디스플레이 호환성 패키지 관리"</string>
