--- a/service/res/values-mr/strings.xml
+++ b/service/res/values-mr/strings.xml
@@ -30,6 +30,10 @@
     <string name="car_permission_desc_hvac" msgid="3754229695589774195">"तुमच्या कारचे hvac अ‍ॅक्सेस करा."</string>
     <string name="car_permission_label_mileage" msgid="4661317074631150551">"कारच्या मायलेजची माहिती अ‍ॅक्सेस करा"</string>
     <string name="car_permission_desc_mileage" msgid="7179735693278681090">"तुमच्या कारची मायलेज माहिती अ‍ॅक्सेस करा."</string>
+    <!-- no translation found for car_permission_label_mileage_3p (7542459195663034759) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_mileage_3p (9109350882748664570) -->
+    <skip />
     <string name="car_permission_label_speed" msgid="1149027717860529745">"कारची गती वाचा"</string>
     <string name="car_permission_desc_speed" msgid="2047965198165448241">"तुमच्या कारची गती अ‍ॅक्सेस करा."</string>
     <string name="car_permission_label_vehicle_dynamics_state" msgid="313779267420048367">"कारची डायनॅमिक स्थिती अ‍ॅक्सेस करा"</string>
@@ -92,6 +96,10 @@
     <string name="car_permission_desc_storage_monitoring" msgid="2075712271139671318">"फ्लॅश स्टोरेज वापराचे परीक्षण करा"</string>
     <string name="car_permission_label_driving_state" msgid="7754624599537393650">"ड्रायव्हिंगची स्थिती ऐका"</string>
     <string name="car_permission_desc_driving_state" msgid="2684025262811635737">"ड्रायव्हिंगच्या स्थितीतील बदल ऐका."</string>
+    <!-- no translation found for car_permission_label_driving_state_3p (1395905103166125030) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_driving_state_3p (5491522450897843003) -->
+    <skip />
     <string name="car_permission_label_use_telemetry_service" msgid="948005838683758846">"कार टेलिमेट्री सेवा वापरा"</string>
     <string name="car_permission_desc_use_telemetry_service" msgid="3633214312435700766">"कारच्या सिस्टमच्या स्थितीचा डेटा गोळा करा."</string>
     <string name="car_permission_label_use_evs_service" msgid="1729276125209310607">"कार EVS सेवा वापरा"</string>
@@ -106,6 +114,10 @@
     <string name="car_permission_desc_monitor_evs_status" msgid="2764278897143573535">"EVS सेवेच्या स्थितीमधील बदल ऐका"</string>
     <string name="car_permission_label_car_engine_detailed" msgid="8911992719173587337">"कारच्या इंजिनची तपशीलवार माहिती अ‍ॅक्सेस करा"</string>
     <string name="car_permission_desc_car_engine_detailed" msgid="1746863362811347700">"तुमच्या कारच्या इंजिनची तपशीलवार माहिती अ‍ॅक्सेस करा."</string>
+    <!-- no translation found for car_permission_label_car_engine_detailed_3p (2695036212735960169) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_engine_detailed_3p (7536940094077391015) -->
+    <skip />
     <string name="car_permission_label_car_energy_ports" msgid="8548990315169219454">"कारचा इंधन भरण्याचा दरवाजा आणि चार्ज पोर्ट अ‍ॅक्सेस करा"</string>
     <string name="car_permission_desc_car_energy_ports" msgid="7771185999828794949">"कारचा इंधन भरण्याचा दरवाजा आणि चार्ज पोर्ट अ‍ॅक्सेस करा."</string>
     <string name="car_permission_label_control_car_energy_ports" msgid="4375137311026313475">"कारचा इंधन भरण्याचा दरवाजा आणि चार्ज पोर्ट नियंत्रित करा"</string>
@@ -120,6 +132,10 @@
     <string name="car_permission_desc_control_car_mirrors" msgid="1224135684068855032">"कारचे आरसे नियंत्रित करा."</string>
     <string name="car_permission_label_control_car_seats" msgid="1826934820585497135">"कारची आसने नियंत्रित करा"</string>
     <string name="car_permission_desc_control_car_seats" msgid="2407536601226470563">"कारची आसने नियंत्रित करा."</string>
+    <!-- no translation found for car_permission_label_read_car_seats (2996918480980128872) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_seats (5894145845932493046) -->
+    <skip />
     <string name="car_permission_label_read_car_seat_belts" msgid="2051828795852087659">"कारच्या सीट बेल्टची स्थिती वाचा"</string>
     <string name="car_permission_desc_read_car_seat_belts" msgid="7076977711613912339">"कारच्या सीट बेल्टची स्थिती वाचा."</string>
     <string name="car_permission_label_read_impact_sensors" msgid="9193288836326363975">"कारच्या इम्पॅक्ट सेन्सरची माहिती वाचा"</string>
@@ -158,8 +174,16 @@
     <string name="car_permission_desc_car_exterior_environment" msgid="1716656004731603379">"कारचे बाहेरील तापमान अ‍ॅक्सेस करा."</string>
     <string name="car_permission_label_car_tires" msgid="4379255261197836840">"कारच्या टायरची माहिती अ‍ॅक्सेस करा"</string>
     <string name="car_permission_desc_car_tires" msgid="8134496466769810134">"कारच्या टायरची माहिती अ‍ॅक्सेस करा."</string>
+    <!-- no translation found for car_permission_label_car_tires_3p (1360632319908226570) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_tires_3p (820574543667371274) -->
+    <skip />
     <string name="car_permission_label_car_steering" msgid="7779530447441232479">"कारच्या स्टेअरिंग कोनाची माहिती वाचा"</string>
     <string name="car_permission_desc_car_steering" msgid="1357331844530708138">"कारच्या स्टेअरिंग कोनाची माहिती अ‍ॅक्सेस करा."</string>
+    <!-- no translation found for car_permission_label_read_car_steering_3p (1598866058085489462) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_steering_3p (576361609663755171) -->
+    <skip />
     <string name="car_permission_label_read_car_display_units" msgid="7617008314862097183">"कार डिस्प्ले युनिट वाचा"</string>
     <string name="car_permission_desc_read_car_display_units" msgid="6891898275208542385">"डिस्प्ले युनिट वाचा."</string>
     <string name="car_permission_label_control_car_display_units" msgid="4975303668183173076">"कारचे डिस्प्ले युनिट नियंत्रित करा"</string>
@@ -212,6 +236,10 @@
     <string name="car_permission_desc_control_adas_states" msgid="1893171217779342348">"कारच्या ADAS स्थितीशी संबंधित माहिती नियंत्रित करा."</string>
     <string name="car_permission_label_read_windshield_wipers" msgid="896867772546890348">"कारच्या विंडशिल्ड वायपरशी संबंधित डेटा वाचा"</string>
     <string name="car_permission_desc_read_windshield_wipers" msgid="597300271560195986">"कारच्या विंडशिल्ड वायपरशी संबंधित डेटा वाचा."</string>
+    <!-- no translation found for car_permission_label_read_windshield_wipers_3p (4784843702416325970) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_windshield_wipers_3p (604163171596913379) -->
+    <skip />
     <string name="car_permission_label_control_windshield_wipers" msgid="7971852482734087493">"कारची विंडशिल्ड वायपर नियंत्रित करा"</string>
     <string name="car_permission_desc_control_windshield_wipers" msgid="3803429825323199728">"कारची विंडशिल्ड वायपर नियंत्रित करा."</string>
     <string name="car_permission_label_manage_display_compatibility" msgid="52642673039197383">"डिस्प्ले कंपॅटिबिलिटी पॅकेज व्यवस्थापित करा"</string>
