--- a/service/res/values-ne/strings.xml
+++ b/service/res/values-ne/strings.xml
@@ -30,6 +30,10 @@
     <string name="car_permission_desc_hvac" msgid="3754229695589774195">"तपाईंको कारको hvac माथि पहुँच राख्ने।"</string>
     <string name="car_permission_label_mileage" msgid="4661317074631150551">"कारको माइलेजसम्बन्धी जानकारीमाथि पहुँच राख्ने"</string>
     <string name="car_permission_desc_mileage" msgid="7179735693278681090">"तपाईंको कारको माइलेजसम्बन्धी जानकारीमाथि पहुँच राख्ने।"</string>
+    <!-- no translation found for car_permission_label_mileage_3p (7542459195663034759) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_mileage_3p (9109350882748664570) -->
+    <skip />
     <string name="car_permission_label_speed" msgid="1149027717860529745">"कारको गति पढ्ने"</string>
     <string name="car_permission_desc_speed" msgid="2047965198165448241">"तपाईंको कारको गतिमाथि पहुँच राख्ने।"</string>
     <string name="car_permission_label_vehicle_dynamics_state" msgid="313779267420048367">"कारको गतिशिल स्थितिमाथि पहुँच राख्ने"</string>
@@ -92,6 +96,10 @@
     <string name="car_permission_desc_storage_monitoring" msgid="2075712271139671318">"फ्ल्यास भण्डारणको प्रयोगको अनुगमन गर्ने"</string>
     <string name="car_permission_label_driving_state" msgid="7754624599537393650">"ड्राइभिङको स्थिति सुन्ने"</string>
     <string name="car_permission_desc_driving_state" msgid="2684025262811635737">"ड्राइभिङको स्थितिमा हुने परिवर्तनहरू सुन्ने।"</string>
+    <!-- no translation found for car_permission_label_driving_state_3p (1395905103166125030) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_driving_state_3p (5491522450897843003) -->
+    <skip />
     <string name="car_permission_label_use_telemetry_service" msgid="948005838683758846">"कारको टेलिमेट्री सेवा प्रयोग गर्न दिनुहोस्"</string>
     <string name="car_permission_desc_use_telemetry_service" msgid="3633214312435700766">"कारको प्रणालीको अवस्थासम्बन्धी डेटा सङ्कलन गर्न दिनुहोस्।"</string>
     <string name="car_permission_label_use_evs_service" msgid="1729276125209310607">"कार EVS सेवा प्रयोग गर्नुहोस्"</string>
@@ -106,6 +114,10 @@
     <string name="car_permission_desc_monitor_evs_status" msgid="2764278897143573535">"EVS सेवाको स्थितिमा भएका परिवर्तनबारे सूचना प्राप्त गर्ने"</string>
     <string name="car_permission_label_car_engine_detailed" msgid="8911992719173587337">"कारको इन्जिनको विस्तृत जानकारीमाथि पहुँच राख्ने"</string>
     <string name="car_permission_desc_car_engine_detailed" msgid="1746863362811347700">"तपाईंको कारको इन्जिनको विस्तृत जानकारीमाथि पहुँच राख्ने।"</string>
+    <!-- no translation found for car_permission_label_car_engine_detailed_3p (2695036212735960169) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_engine_detailed_3p (7536940094077391015) -->
+    <skip />
     <string name="car_permission_label_car_energy_ports" msgid="8548990315169219454">"कारको इन्धन हाल्ने ट्याङ्कीको बिर्को तथा चार्ज गर्ने पोर्टमाथि पहुँच राख्ने"</string>
     <string name="car_permission_desc_car_energy_ports" msgid="7771185999828794949">"कारको इन्धन हाल्ने ट्याङ्कीको बिर्को तथा चार्ज गर्ने पोर्टमाथि पहुँच राख्ने।"</string>
     <string name="car_permission_label_control_car_energy_ports" msgid="4375137311026313475">"कारको इन्धन हाल्ने ट्याङ्कीको बिर्को तथा चार्ज गर्ने पोर्टमाथि नियन्त्रण राख्नुहोस्"</string>
@@ -120,6 +132,10 @@
     <string name="car_permission_desc_control_car_mirrors" msgid="1224135684068855032">"कारका ऐनाहरू नियन्त्रण गर्ने।"</string>
     <string name="car_permission_label_control_car_seats" msgid="1826934820585497135">"कारका सिटहरू नियन्त्रण गर्ने"</string>
     <string name="car_permission_desc_control_car_seats" msgid="2407536601226470563">"कारका सिटहरू नियन्त्रण गर्ने।"</string>
+    <!-- no translation found for car_permission_label_read_car_seats (2996918480980128872) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_seats (5894145845932493046) -->
+    <skip />
     <string name="car_permission_label_read_car_seat_belts" msgid="2051828795852087659">"कारका सिट बेल्टको स्थिति रिड गर्ने"</string>
     <string name="car_permission_desc_read_car_seat_belts" msgid="7076977711613912339">"कारका सिट बेल्टको स्थिति रिड गर्ने।"</string>
     <string name="car_permission_label_read_impact_sensors" msgid="9193288836326363975">"कारका इम्प्याक्ट सेन्सरबाट प्राप्त जानकारी रिड गर्ने"</string>
@@ -158,8 +174,16 @@
     <string name="car_permission_desc_car_exterior_environment" msgid="1716656004731603379">"कारको बाहिरी भागको तापक्रममाथि पहुँच राख्ने।"</string>
     <string name="car_permission_label_car_tires" msgid="4379255261197836840">"कारका टायरहरूसम्बन्धी जानकारीमाथि पहुँच राख्ने"</string>
     <string name="car_permission_desc_car_tires" msgid="8134496466769810134">"कारको टायरसम्बन्धी जानकारीमाथि पहुँच राख्ने।"</string>
+    <!-- no translation found for car_permission_label_car_tires_3p (1360632319908226570) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_tires_3p (820574543667371274) -->
+    <skip />
     <string name="car_permission_label_car_steering" msgid="7779530447441232479">"कारको स्टियरिङको कोणसम्बन्धी जानकारी पढ्ने"</string>
     <string name="car_permission_desc_car_steering" msgid="1357331844530708138">"कारको स्टियरिङको कोणसम्बन्धी जनाकारीमाथि पहुँच राख्ने।"</string>
+    <!-- no translation found for car_permission_label_read_car_steering_3p (1598866058085489462) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_steering_3p (576361609663755171) -->
+    <skip />
     <string name="car_permission_label_read_car_display_units" msgid="7617008314862097183">"कारका डिस्प्ले एकाइहरू पढ्ने"</string>
     <string name="car_permission_desc_read_car_display_units" msgid="6891898275208542385">"डिस्प्लेका एकाइहरू पढ्ने।"</string>
     <string name="car_permission_label_control_car_display_units" msgid="4975303668183173076">"कारका डिस्प्ले एकाइहरू नियन्त्रण गर्ने"</string>
@@ -212,6 +236,10 @@
     <string name="car_permission_desc_control_adas_states" msgid="1893171217779342348">"कारको ADAS स्थितिसम्बन्धी जानकारी नियन्त्रण गर्ने।"</string>
     <string name="car_permission_label_read_windshield_wipers" msgid="896867772546890348">"कारको विन्डसिल्ड वाइपरहरू रिड गर्ने"</string>
     <string name="car_permission_desc_read_windshield_wipers" msgid="597300271560195986">"कारको विन्डसिल्ड वाइपरहरू रिड गर्ने।"</string>
+    <!-- no translation found for car_permission_label_read_windshield_wipers_3p (4784843702416325970) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_windshield_wipers_3p (604163171596913379) -->
+    <skip />
     <string name="car_permission_label_control_windshield_wipers" msgid="7971852482734087493">"कारको विन्डसिल्ड वाइपरहरू प्रयोग गर्ने"</string>
     <string name="car_permission_desc_control_windshield_wipers" msgid="3803429825323199728">"कारको विन्डसिल्ड वाइपरहरू प्रयोग गर्ने।"</string>
     <string name="car_permission_label_manage_display_compatibility" msgid="52642673039197383">"डिस्प्ले कम्प्याटिबिलिटी प्याकेजहरू व्यवस्थापन गर्नुहोस्"</string>
