--- a/service/res/values-sq/strings.xml
+++ b/service/res/values-sq/strings.xml
@@ -30,6 +30,10 @@
     <string name="car_permission_desc_hvac" msgid="3754229695589774195">"Qasu në sistemin HVAC të makinës."</string>
     <string name="car_permission_label_mileage" msgid="4661317074631150551">"qasu tek informacionet e kilometrazhit të makinës"</string>
     <string name="car_permission_desc_mileage" msgid="7179735693278681090">"Qasje në informacionet e kilometrazhit të makinës."</string>
+    <!-- no translation found for car_permission_label_mileage_3p (7542459195663034759) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_mileage_3p (9109350882748664570) -->
+    <skip />
     <string name="car_permission_label_speed" msgid="1149027717860529745">"lexo shpejtësinë e makinës"</string>
     <string name="car_permission_desc_speed" msgid="2047965198165448241">"Qasu në shpejtësinë e makinës."</string>
     <string name="car_permission_label_vehicle_dynamics_state" msgid="313779267420048367">"qasu te gjendja e dinamikës së makinës"</string>
@@ -92,6 +96,10 @@
     <string name="car_permission_desc_storage_monitoring" msgid="2075712271139671318">"Monitoro përdorimin e hapësirës ruajtëse të formatit flash"</string>
     <string name="car_permission_label_driving_state" msgid="7754624599537393650">"dëgjo gjendjen e lëvizjes me makinë"</string>
     <string name="car_permission_desc_driving_state" msgid="2684025262811635737">"Dëgjo ndryshimet e gjendjes së lëvizjes me makinë."</string>
+    <!-- no translation found for car_permission_label_driving_state_3p (1395905103166125030) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_driving_state_3p (5491522450897843003) -->
+    <skip />
     <string name="car_permission_label_use_telemetry_service" msgid="948005838683758846">"Të përdorë shërbimin e telemetrisë të makinës"</string>
     <string name="car_permission_desc_use_telemetry_service" msgid="3633214312435700766">"Të mbledhë të dhënat e integritetit të sistemit të makinës."</string>
     <string name="car_permission_label_use_evs_service" msgid="1729276125209310607">"Të përdorin shërbimin EVS të makinës"</string>
@@ -106,6 +114,10 @@
     <string name="car_permission_desc_monitor_evs_status" msgid="2764278897143573535">"Të dëgjojnë ndryshimet e statusit të shërbimit EVS"</string>
     <string name="car_permission_label_car_engine_detailed" msgid="8911992719173587337">"qasu te informacionet e detajuara të motorit të makinës"</string>
     <string name="car_permission_desc_car_engine_detailed" msgid="1746863362811347700">"Qasje në informacionet e detajuara të motorit të makinës."</string>
+    <!-- no translation found for car_permission_label_car_engine_detailed_3p (2695036212735960169) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_engine_detailed_3p (7536940094077391015) -->
+    <skip />
     <string name="car_permission_label_car_energy_ports" msgid="8548990315169219454">"qasu te porta e karburantit të makinës dhe te porta e karikimit"</string>
     <string name="car_permission_desc_car_energy_ports" msgid="7771185999828794949">"Qasu te porta e karburantit të makinës dhe te porta e karikimit."</string>
     <string name="car_permission_label_control_car_energy_ports" msgid="4375137311026313475">"kontrollo kapakun e karburantit të makinës dhe portën e karikimit"</string>
@@ -120,6 +132,10 @@
     <string name="car_permission_desc_control_car_mirrors" msgid="1224135684068855032">"Kontrollo pasqyrat e makinës."</string>
     <string name="car_permission_label_control_car_seats" msgid="1826934820585497135">"kontrollo ndenjëset e makinës"</string>
     <string name="car_permission_desc_control_car_seats" msgid="2407536601226470563">"Kontrollo ndenjëset e makinës."</string>
+    <!-- no translation found for car_permission_label_read_car_seats (2996918480980128872) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_seats (5894145845932493046) -->
+    <skip />
     <string name="car_permission_label_read_car_seat_belts" msgid="2051828795852087659">"lexo gjendjen e rripave të sigurimit të makinës"</string>
     <string name="car_permission_desc_read_car_seat_belts" msgid="7076977711613912339">"Lexo gjendjen e rripave të sigurimit të makinës."</string>
     <string name="car_permission_label_read_impact_sensors" msgid="9193288836326363975">"lexo sensorët e përplasjes së makinës"</string>
@@ -158,8 +174,16 @@
     <string name="car_permission_desc_car_exterior_environment" msgid="1716656004731603379">"Qasu te temperatura e jashtme e makinës."</string>
     <string name="car_permission_label_car_tires" msgid="4379255261197836840">"qasu tek informacionet e gomave të makinës"</string>
     <string name="car_permission_desc_car_tires" msgid="8134496466769810134">"Qasu tek informacionet e gomave të makinës."</string>
+    <!-- no translation found for car_permission_label_car_tires_3p (1360632319908226570) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_tires_3p (820574543667371274) -->
+    <skip />
     <string name="car_permission_label_car_steering" msgid="7779530447441232479">"lexo informacionet e këndit të drejtimit të makinës"</string>
     <string name="car_permission_desc_car_steering" msgid="1357331844530708138">"Qasu tek informacionet e këndit të drejtimit të makinës."</string>
+    <!-- no translation found for car_permission_label_read_car_steering_3p (1598866058085489462) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_steering_3p (576361609663755171) -->
+    <skip />
     <string name="car_permission_label_read_car_display_units" msgid="7617008314862097183">"lexo njësitë e ekranit të makinës"</string>
     <string name="car_permission_desc_read_car_display_units" msgid="6891898275208542385">"Lexo njësitë e ekranit."</string>
     <string name="car_permission_label_control_car_display_units" msgid="4975303668183173076">"kontrollo njësitë e ekranit të makinës"</string>
@@ -212,6 +236,10 @@
     <string name="car_permission_desc_control_adas_states" msgid="1893171217779342348">"Kontrollo informacionet e statuseve ADAS të makinës."</string>
     <string name="car_permission_label_read_windshield_wipers" msgid="896867772546890348">"lexo fshirëset e xhamave të makinës"</string>
     <string name="car_permission_desc_read_windshield_wipers" msgid="597300271560195986">"Lexo fshirëset e xhamave të makinës."</string>
+    <!-- no translation found for car_permission_label_read_windshield_wipers_3p (4784843702416325970) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_windshield_wipers_3p (604163171596913379) -->
+    <skip />
     <string name="car_permission_label_control_windshield_wipers" msgid="7971852482734087493">"kontrollo fshirëset e xhamave të makinës"</string>
     <string name="car_permission_desc_control_windshield_wipers" msgid="3803429825323199728">"Kontrollo fshirëset e xhamave të makinës."</string>
     <string name="car_permission_label_manage_display_compatibility" msgid="52642673039197383">"të menaxhojë paketat e përputhshmërisë së ekranit"</string>
