--- a/service/res/values-uk/strings.xml
+++ b/service/res/values-uk/strings.xml
@@ -30,6 +30,10 @@
     <string name="car_permission_desc_hvac" msgid="3754229695589774195">"Доступ до системи клімат-контролю автомобіля."</string>
     <string name="car_permission_label_mileage" msgid="4661317074631150551">"доступ до інформації про пробіг автомобіля"</string>
     <string name="car_permission_desc_mileage" msgid="7179735693278681090">"Доступ до інформації про пробіг автомобіля."</string>
+    <!-- no translation found for car_permission_label_mileage_3p (7542459195663034759) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_mileage_3p (9109350882748664570) -->
+    <skip />
     <string name="car_permission_label_speed" msgid="1149027717860529745">"перегляд швидкості автомобіля"</string>
     <string name="car_permission_desc_speed" msgid="2047965198165448241">"Доступ до інформації про швидкість автомобіля."</string>
     <string name="car_permission_label_vehicle_dynamics_state" msgid="313779267420048367">"доступ до даних про стан динаміки автомобіля"</string>
@@ -92,6 +96,10 @@
     <string name="car_permission_desc_storage_monitoring" msgid="2075712271139671318">"Відстеження використання флеш-пам’яті"</string>
     <string name="car_permission_label_driving_state" msgid="7754624599537393650">"відстеження стану кермування"</string>
     <string name="car_permission_desc_driving_state" msgid="2684025262811635737">"Відстеження змін стану кермування."</string>
+    <!-- no translation found for car_permission_label_driving_state_3p (1395905103166125030) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_driving_state_3p (5491522450897843003) -->
+    <skip />
     <string name="car_permission_label_use_telemetry_service" msgid="948005838683758846">"Використовувати сервіс телеметрії автомобіля"</string>
     <string name="car_permission_desc_use_telemetry_service" msgid="3633214312435700766">"Збір даних системи про стан автомобіля."</string>
     <string name="car_permission_label_use_evs_service" msgid="1729276125209310607">"Використовувати сервіс Car EVS"</string>
@@ -106,6 +114,10 @@
     <string name="car_permission_desc_monitor_evs_status" msgid="2764278897143573535">"Відстежувати зміни статусу сервісу EVS"</string>
     <string name="car_permission_label_car_engine_detailed" msgid="8911992719173587337">"доступ до детальної інформації про двигун автомобіля"</string>
     <string name="car_permission_desc_car_engine_detailed" msgid="1746863362811347700">"Доступ до детальної інформації про двигун автомобіля."</string>
+    <!-- no translation found for car_permission_label_car_engine_detailed_3p (2695036212735960169) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_engine_detailed_3p (7536940094077391015) -->
+    <skip />
     <string name="car_permission_label_car_energy_ports" msgid="8548990315169219454">"доступ до даних про кришку паливного бака чи порт заряджання автомобіля"</string>
     <string name="car_permission_desc_car_energy_ports" msgid="7771185999828794949">"Доступ до даних про кришку паливного бака чи порт заряджання автомобіля."</string>
     <string name="car_permission_label_control_car_energy_ports" msgid="4375137311026313475">"керування кришкою паливного бака й портом заряджання автомобіля"</string>
@@ -120,6 +132,10 @@
     <string name="car_permission_desc_control_car_mirrors" msgid="1224135684068855032">"Керування дзеркалами автомобіля."</string>
     <string name="car_permission_label_control_car_seats" msgid="1826934820585497135">"керування сидіннями автомобіля"</string>
     <string name="car_permission_desc_control_car_seats" msgid="2407536601226470563">"Керування сидіннями автомобіля."</string>
+    <!-- no translation found for car_permission_label_read_car_seats (2996918480980128872) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_seats (5894145845932493046) -->
+    <skip />
     <string name="car_permission_label_read_car_seat_belts" msgid="2051828795852087659">"переглядати дані про стан ременів безпеки автомобіля"</string>
     <string name="car_permission_desc_read_car_seat_belts" msgid="7076977711613912339">"Переглядати дані про стан ременів безпеки автомобіля."</string>
     <string name="car_permission_label_read_impact_sensors" msgid="9193288836326363975">"переглядати інформацію з датчиків зіткнення автомобіля"</string>
@@ -158,8 +174,16 @@
     <string name="car_permission_desc_car_exterior_environment" msgid="1716656004731603379">"Доступ до інформації про зовнішню температуру автомобіля."</string>
     <string name="car_permission_label_car_tires" msgid="4379255261197836840">"доступ до інформації про шини автомобіля"</string>
     <string name="car_permission_desc_car_tires" msgid="8134496466769810134">"Доступ до інформації про шини автомобіля."</string>
+    <!-- no translation found for car_permission_label_car_tires_3p (1360632319908226570) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_tires_3p (820574543667371274) -->
+    <skip />
     <string name="car_permission_label_car_steering" msgid="7779530447441232479">"перегляд інформації про кут повороту коліс автомобіля"</string>
     <string name="car_permission_desc_car_steering" msgid="1357331844530708138">"Доступ до інформації про кут повороту коліс автомобіля."</string>
+    <!-- no translation found for car_permission_label_read_car_steering_3p (1598866058085489462) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_steering_3p (576361609663755171) -->
+    <skip />
     <string name="car_permission_label_read_car_display_units" msgid="7617008314862097183">"перегляд блоків дисплея автомобіля"</string>
     <string name="car_permission_desc_read_car_display_units" msgid="6891898275208542385">"Перегляд блоків дисплея."</string>
     <string name="car_permission_label_control_car_display_units" msgid="4975303668183173076">"керування блоками дисплея автомобіля"</string>
@@ -212,6 +236,10 @@
     <string name="car_permission_desc_control_adas_states" msgid="1893171217779342348">"Керування інформацією про стан Удосконаленої системи допомоги водію автомобіля."</string>
     <string name="car_permission_label_read_windshield_wipers" msgid="896867772546890348">"зчитувати дані про склоочисники вітрового скла автомобіля"</string>
     <string name="car_permission_desc_read_windshield_wipers" msgid="597300271560195986">"Зчитування даних про склоочисники вітрового скла автомобіля."</string>
+    <!-- no translation found for car_permission_label_read_windshield_wipers_3p (4784843702416325970) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_windshield_wipers_3p (604163171596913379) -->
+    <skip />
     <string name="car_permission_label_control_windshield_wipers" msgid="7971852482734087493">"керувати склоочисниками вітрового скла автомобіля"</string>
     <string name="car_permission_desc_control_windshield_wipers" msgid="3803429825323199728">"Керування склоочисниками вітрового скла автомобіля."</string>
     <string name="car_permission_label_manage_display_compatibility" msgid="52642673039197383">"керувати пакетами сумісності з екраном"</string>
