--- a/service/res/values-zh-rHK/strings.xml
+++ b/service/res/values-zh-rHK/strings.xml
@@ -30,6 +30,10 @@
     <string name="car_permission_desc_hvac" msgid="3754229695589774195">"存取汽車的暖通空調。"</string>
     <string name="car_permission_label_mileage" msgid="4661317074631150551">"存取汽車里數資訊"</string>
     <string name="car_permission_desc_mileage" msgid="7179735693278681090">"存取汽車里數資訊。"</string>
+    <!-- no translation found for car_permission_label_mileage_3p (7542459195663034759) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_mileage_3p (9109350882748664570) -->
+    <skip />
     <string name="car_permission_label_speed" msgid="1149027717860529745">"讀取車速"</string>
     <string name="car_permission_desc_speed" msgid="2047965198165448241">"存取車速。"</string>
     <string name="car_permission_label_vehicle_dynamics_state" msgid="313779267420048367">"存取汽車的動力狀態"</string>
@@ -92,6 +96,10 @@
     <string name="car_permission_desc_storage_monitoring" msgid="2075712271139671318">"監控快閃儲存空間使用狀態"</string>
     <string name="car_permission_label_driving_state" msgid="7754624599537393650">"聽取駕駛狀態"</string>
     <string name="car_permission_desc_driving_state" msgid="2684025262811635737">"聽取駕駛狀態變動。"</string>
+    <!-- no translation found for car_permission_label_driving_state_3p (1395905103166125030) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_driving_state_3p (5491522450897843003) -->
+    <skip />
     <string name="car_permission_label_use_telemetry_service" msgid="948005838683758846">"使用汽車遙測服務"</string>
     <string name="car_permission_desc_use_telemetry_service" msgid="3633214312435700766">"收集汽車系統健康資料。"</string>
     <string name="car_permission_label_use_evs_service" msgid="1729276125209310607">"使用 Car EVS Service"</string>
@@ -106,6 +114,10 @@
     <string name="car_permission_desc_monitor_evs_status" msgid="2764278897143573535">"留意 EVS 服務狀態變更"</string>
     <string name="car_permission_label_car_engine_detailed" msgid="8911992719173587337">"存取汽車引擎詳情"</string>
     <string name="car_permission_desc_car_engine_detailed" msgid="1746863362811347700">"存取汽車引擎詳情。"</string>
+    <!-- no translation found for car_permission_label_car_engine_detailed_3p (2695036212735960169) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_engine_detailed_3p (7536940094077391015) -->
+    <skip />
     <string name="car_permission_label_car_energy_ports" msgid="8548990315169219454">"存取汽車油箱蓋及充電埠"</string>
     <string name="car_permission_desc_car_energy_ports" msgid="7771185999828794949">"存取汽車油箱蓋及充電埠。"</string>
     <string name="car_permission_label_control_car_energy_ports" msgid="4375137311026313475">"控制汽車油箱蓋及充電埠"</string>
@@ -120,6 +132,10 @@
     <string name="car_permission_desc_control_car_mirrors" msgid="1224135684068855032">"控制汽車倒後鏡。"</string>
     <string name="car_permission_label_control_car_seats" msgid="1826934820585497135">"控制汽車座位"</string>
     <string name="car_permission_desc_control_car_seats" msgid="2407536601226470563">"控制汽車座位。"</string>
+    <!-- no translation found for car_permission_label_read_car_seats (2996918480980128872) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_seats (5894145845932493046) -->
+    <skip />
     <string name="car_permission_label_read_car_seat_belts" msgid="2051828795852087659">"讀取汽車的安全帶狀態"</string>
     <string name="car_permission_desc_read_car_seat_belts" msgid="7076977711613912339">"讀取汽車的安全帶狀態。"</string>
     <string name="car_permission_label_read_impact_sensors" msgid="9193288836326363975">"讀取汽車的碰撞感應器資料"</string>
@@ -158,8 +174,16 @@
     <string name="car_permission_desc_car_exterior_environment" msgid="1716656004731603379">"存取車外溫度。"</string>
     <string name="car_permission_label_car_tires" msgid="4379255261197836840">"存取車胎資訊"</string>
     <string name="car_permission_desc_car_tires" msgid="8134496466769810134">"存取車胎資訊。"</string>
+    <!-- no translation found for car_permission_label_car_tires_3p (1360632319908226570) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_car_tires_3p (820574543667371274) -->
+    <skip />
     <string name="car_permission_label_car_steering" msgid="7779530447441232479">"讀取汽車軚盤角度資訊"</string>
     <string name="car_permission_desc_car_steering" msgid="1357331844530708138">"存取汽車軚盤角度資訊。"</string>
+    <!-- no translation found for car_permission_label_read_car_steering_3p (1598866058085489462) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_car_steering_3p (576361609663755171) -->
+    <skip />
     <string name="car_permission_label_read_car_display_units" msgid="7617008314862097183">"讀取汽車顯示裝置"</string>
     <string name="car_permission_desc_read_car_display_units" msgid="6891898275208542385">"讀取顯示裝置。"</string>
     <string name="car_permission_label_control_car_display_units" msgid="4975303668183173076">"控制汽車顯示裝置"</string>
@@ -212,6 +236,10 @@
     <string name="car_permission_desc_control_adas_states" msgid="1893171217779342348">"控制汽車的 ADAS 狀態資料。"</string>
     <string name="car_permission_label_read_windshield_wipers" msgid="896867772546890348">"讀取汽車的擋風玻璃水撥"</string>
     <string name="car_permission_desc_read_windshield_wipers" msgid="597300271560195986">"讀取汽車的擋風玻璃水撥。"</string>
+    <!-- no translation found for car_permission_label_read_windshield_wipers_3p (4784843702416325970) -->
+    <skip />
+    <!-- no translation found for car_permission_desc_read_windshield_wipers_3p (604163171596913379) -->
+    <skip />
     <string name="car_permission_label_control_windshield_wipers" msgid="7971852482734087493">"控制汽車的擋風玻璃水撥"</string>
     <string name="car_permission_desc_control_windshield_wipers" msgid="3803429825323199728">"控制汽車的擋風玻璃水撥。"</string>
     <string name="car_permission_label_manage_display_compatibility" msgid="52642673039197383">"管理有顯示兼容性問題的應用程式"</string>
