Update dwed systemui RRO
- Use string-array for nav_components
- set config_default_activities and config_non_trimmable_activities

Bug: 389984119
Test: manual
Flag: com.android.systemui.car.scalable_ui
Change-Id: I1091725e636e27e2e82caaa7bff001f640df9a03

--- a/car_product/dewd/rro/CarSystemUIDewdUIRRO/res/values/strings.xml
+++ b/car_product/dewd/rro/CarSystemUIDewdUIRRO/res/values/strings.xml
@@ -14,10 +14,13 @@
   ~ limitations under the License.
   -->
   <resources>
-    <string name="nav_component">com.android.car.portraitlauncher/.homeactivities.BackgroundPanelBaseActivity</string>
-    <string name="appgrid_componentName">com.android.car.portraitlauncher/com.android.car.carlauncher.AppGridActivity</string>
-    <string name="contextual_bar_component">com.android.car.portraitlauncher/com.android.car.carlauncher.ControlBarActivity</string>
-    <string name="default_config">DEFAULT</string>
+    <string name="appgrid_componentName" translatable="false">com.android.car.portraitlauncher/com.android.car.carlauncher.AppGridActivity</string>
+    <string name="contextual_bar_component" translatable="false">com.android.car.portraitlauncher/com.android.car.carlauncher.ControlBarActivity</string>
+    <string name="default_config" translatable="false">DEFAULT</string>
 
-    <string name="config_appGridComponentName">@string/appgrid_componentName</string>
+    <string name="config_appGridComponentName" translatable="false">@string/appgrid_componentName</string>
+
+    <string-array name="nav_components" translatable="false">
+        <item>com.android.car.portraitlauncher/.homeactivities.BackgroundPanelBaseActivity</item>
+    </string-array>
 </resources>
